log
Wed Mar 25 02:05:30 PM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:9: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   38 |         list->head = NULL ;
      |         ^~~~
      |         List
list.c:38:9: note: each undeclared identifier is reported only once for each function it appears in
bfc2cbf
Wed Mar 25 02:05:48 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/60
952a0ef
Wed Mar 25 02:09:27 PM UTC 2026: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   52 |     if (lista)
      |         ^~~~~
      |         list
list.c:52:9: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:63:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   63 |     if (lista)
      |         ^~~~~
      |         list
a919aa9
Wed Mar 25 02:10:10 PM UTC 2026: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/60
d3712f2
Wed Mar 25 02:12:30 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   55 |         return list->current->dato ;
      |                               ^~~~
      |                               data
list.c: In function ‘nextList’:
list.c:66:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   66 |         return list->current->dato ;
      |                               ^~~~
      |                               data
bcb8013
